# pokebrawl

./: .env.example  .gitignore  CREDITS.md  README.md  RESUME.md  index.html  package-lock.json  package.json  render.yaml  vite.config.ts
programs/: README.md
programs/pokebrawl-escrow/: Cargo.toml  idl.json
programs/pokebrawl-escrow/src/: lib.rs
server/: README.md  auth.ts  db.ts  escrow.ts  index.ts  schema.sql
src/: App.tsx  main.tsx  polyfill-buffer.ts  styles.css  types.ts
src/components/: AboutDevContent.tsx  AuthScreen.tsx  Avatar.tsx  BattleField.tsx  BattleView.tsx  BuyPokemon.tsx  CharacterCreate.tsx  DialogBox.tsx  Lobby.tsx  Modal.tsx  MovePicker.tsx  OnlineMatch.tsx  PokemonPicker.tsx  ResearchCenter.tsx  RulesContent.tsx  RulesScene.tsx  StarterDraft.tsx  TeamBuilder.tsx  TitleScreen.tsx  Town.tsx  TrainerSprite.tsx  WalletButton.tsx
src/data/: appearance.ts  bans.ts  items.ts  pokedex.ts  sprites.ts  trainers.ts
src/game/: ai.ts  battle.ts  randomTeam.ts  shiny.ts
src/net/: client.ts  protocol.ts
src/solana/: coin.ts  escrow.ts  escrowProgram.ts  wallet.tsx
src/state/: auth.tsx  profileApi.ts  storage.ts
